kubernetes/infrastructure/networking/traefik/config/dashboard/ingressroute-dashboard-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-internal
  namespace: traefik
spec:
  entryPoints:
    - traefik
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
