kubernetes/infrastructure/networking/traefik/config/dashboard/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: traefik.lan.${CLUSTER_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${TRAEFIK_LB_IP}
    external-dns.kubernetes.io/target: ${TRAEFIK_LB_IP}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lan.${CLUSTER_DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: gatekeeper-auth-chain
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
